mengubah kalimat about

--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
         </div>
         <div class="row justify-content-center fs-4 text-center">
           <div class="col-md-4">
-            <p>Sering mengikuti scrim dan turnament online </p>
+            <p>Sering mengikuti scrim dan turnament online</p>
           </div>
           <div class="col-md-4">
-            <p>Suka olahraga berenang </p>
+            <p>Suka olahraga berenang dan sepak bola</p>
           </div>
         </div>
       </div>
