--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
           </div>
         </div>
         <div class="row justify-content-center fs-4 text-center">
-          <div class="col-md-4">
+          <div class="col-md-4" data-aos="fade-right" data-aos-duration="1000">
             <p>Sering mengikuti scrim dan turnament online</p>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-4" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="200">
             <p>Suka olahraga berenang dan sepak bola</p>
           </div>
         </div>
@@ -212,11 +212,11 @@
 
     <!-- nonaktif -->
 
-     <!-- AOS end -->
-  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-  <script>
-    AOS.init();
-  </script>
+    <!-- AOS end -->
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
 
     <script>
       const scriptURL = `https://script.google.com/macros/s/AKfycbzcd1LHcU8OJcAMd7TJjnVf5H9kP-1MTB3TRX-efXCedo2AzzZQGSGyYfBHgrvVtCc7/exec`;
@@ -247,7 +247,6 @@
           })
           .catch((error) => console.error("Error!", error.message));
       });
-
     </script>
   </body>
 </html>
