--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>My Portofolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
   </head>
   <body id="home">
     <!-- navbar -->
@@ -355,6 +358,6 @@
 	});
 </script>
 <!-- tilt.js end -->
-
+</div>
   </body>
 </html>
