--- a/index.html
+++ b/index.html
@@ -4,15 +4,19 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>My Portofolio</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
   </head>
   <body id="home">
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary shadow-sm fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="#">VAGOS</a>
+        <a class="navbar-brand" href="#">
+          <img src="/img/20211231_165251.png" alt="" width="65" height="65">
+          <strong>VAGOS</strong>
+        </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -261,7 +265,50 @@
 
     <!-- Footer -->
     <footer class="bg-primary text-white text-center pb-5">
-      <p>Created By <i class="bi bi-balloon-heart-fill text-danger"></i> <a href="https://www.instagram.com/yohanes_a_p/" class="text-white fw-bold">@Yohanes__A_P</a> <i class="bi bi-balloon-heart-fill text-danger"></i></p>
+      <p>Created By <i class="bi bi-balloon-heart-fill text-danger"></i> <a href="https://www.instagram.com/yohanes_a_p/" class="text-white fw-bold " style="text-decoration: none;">@Yohanes__A_P</a> <i class="bi bi-balloon-heart-fill text-danger"></i></p>
+
+      <div class="social-btns mt-4">
+        <a href="#">
+          <span class="box">
+            <span class="face front">
+              <i class="fab fa-facebook-f" ></i> 
+            </span>
+            <span class="face bottom">
+              <i class="fab fa-facebook-f" ></i>
+            </span>
+          </span>
+        </a>
+        <a href="#">
+          <span class="box">
+            <span class="face front">
+              <i class="fab fa-twitter"></i>
+            </span>
+            <span class="face bottom">
+              <i class="fab fa-twitter"></i>
+            </span>
+          </span>
+        </a>
+        <a href="#">
+          <span class="box">
+            <span class="face front">
+              <i class="fab fa-instagram"></i>
+            </span>
+            <span class="face bottom">
+              <i class="fab fa-instagram"></i>
+            </span>
+          </span>
+        </a>
+        <a href="#">
+          <span class="box">
+            <span class="face front">
+              <i class="fab fa-youtube"></i>
+            </span>
+            <span class="face bottom">
+              <i class="fab fa-youtube"></i>
+            </span>
+          </span>
+        </a>
+      </div>
     </footer>
     <!-- Footer end -->
   </body>
