menambah margin top

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary shadow-sm fixed-top">
       <div class="container">
         <a class="navbar-brand" href="#">
-          <img src="/img/20211231_165251.png" alt="" width="65" height="65">
+          <img src="/img/20211231_165251.png" alt="" width="40" height="40">
           <strong>VAGOS</strong>
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -50,7 +50,7 @@
 
     <!-- About -->
     <section id="about">
-      <div class="container">
+      <div class="container mt-4">
         <div class="row text-center mb-3">
           <div class="col">
             <h2>About Me</h2>
@@ -113,7 +113,7 @@
 
     <!-- Gambar -->
     <section id="Achievement">
-      <div class="container">
+      <div class="container mt-4">
         <div class="row text-center mb-3">
           <div class="col">
             <h2>My Achievement</h2>
@@ -166,11 +166,11 @@
       <!-- Gallery -->
     <section>
       <div class="row text-center mb-3" id="gallery">
-        <div class="col">
+        <div class="col mt-4">
           <h2>Gallery</h2>
         </div>
       </div>
-      <div class="container col-md-5">
+      <div class="container col-md-5 " >
         <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
           <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -218,7 +218,7 @@
     
     <!-- Contact -->
     <section id="contact">
-      <div class="container">
+      <div class="container mt-4">
         <div class="row text-center mb-3">
           <div class="col">
             <h2>Contact Me</h2>
